# Project-Template

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.interactive.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements-all.txt  requirements-pre-commit.txt
.github/workflows/: code_analysis.yml  code_security_analysis.yml  codeql-analysis.yml  testing.yml  tests.yml
alembic/: env.py
docs/: BEST_PRACTICES.md  CONTRIBUTING.md  GETTING_STARTED_DEVELOPING.md  HEROKU.md  INDEX.md  PROJECT_LEAD.md  SECRETS.md  TEAM.md  TICKETS.md
src/project_template/: config.py  main.py  schema.py
src/project_template/utils/: load_secrets.py
tests/unit/: test_main.py
